add columnName to validation, correct postController, correct swagger
